# duck_hero

./: .gitignore  CMakeLists.txt  README.md  consts.hpp  content.cpp  content.hpp  dialogue.cpp  dialogue.hpp  door.cpp  door.hpp  entity.cpp  entity.hpp  game.cpp  game.hpp  gui.cpp  gui.hpp  gui_bg.cpp  gui_bg.hpp  gui_credits.cpp  gui_credits.hpp  gui_dialogue.cpp  gui_dialogue.hpp  gui_helper.cpp  gui_helper.hpp  gui_items.cpp  gui_items.hpp  gui_level.cpp  gui_level.hpp  gui_logo.cpp  gui_logo.hpp  gui_manager.cpp  gui_manager.hpp  gui_menu.cpp  gui_menu.hpp  gui_nonogram.cpp  gui_nonogram.hpp  gui_prompt.cpp  gui_prompt.hpp  gui_quests.cpp  gui_quests.hpp  (+44 more)
cmake/: FindPhysFS.cmake  FindSDL2_gfx.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
data/: items.xml
data/aseprite/: indoor.aseprite
data/aseprite/characters/: ducky_down.aseprite  ducky_down_old.aseprite  ducky_left.aseprite  ducky_right.aseprite  ducky_up.aseprite
data/aseprite/items/: axe.aseprite  id_card.aseprite  placeholder.aseprite
data/aseprite/tiles/: door.aseprite  sheet.aseprite  sign.aseprite  work_machine.aseprite
data/aseprite/ui/: interact.aseprite
data/dialogues/: fetch_accept.xml  fetch_ask.xml  fetch_complete.xml  fetch_decline.xml  fetch_progress.xml  intro.xml
data/dialogues/duckville/: end.xml
data/levels/: duckville.tmx  test.tmx
data/npcs/: joe.xml
data/npcs/duckville/: bob.xml  joe.xml  mayor.xml  officer.xml  rb157.xml  shopkeeper.xml
data/quests/: fetch_thing.xml
data/quests/duckville/: fetch_axe.xml  get_paper.xml  (+7 more)
data/shops/: joe.xml
(+43 files in other folders)
